add moves var in ttt + fix the profile api call to get friends status

--- a/front-end/src/locales/de/de.json
+++ b/front-end/src/locales/de/de.json
@@ -136,6 +136,7 @@
     "disable2fa": "2FA deaktivieren",
     "error-enabling-2fa": "Fehler beim Aktivieren von 2FA",
     "error-disabling-2fa": "Fehler beim Deaktivieren von 2FA",
-    "win-on-x-moves": "Gewinnen Sie in x Zügen"
+    "win-on-x-moves": "Gewinnen Sie in x Zügen",
+    "matchmaking": "Matchmaking (Paarbildung)"
   }
   
