--- a/front-end/src/locales/en/en.json
+++ b/front-end/src/locales/en/en.json
@@ -136,6 +136,7 @@
     "disable2fa": "Disable 2FA",
     "error-enabling-2fa": "Error enabling 2FA",
     "error-disabling-2fa": "Error disabling 2FA",
-    "win-on-x-moves": "Win on x moves"
+    "win-on-x-moves": "Win on x moves",
+    "matchmaking": "Matchmaking"
 }
   
